--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "scripts": {
     "build:asc": "tsc -p ./cli/asc/tsconfig.json",
+    "lint": "tslint -c tslint.json src/**/*.ts",
     "test": "node bin/asc --validate --text tests/test.ts"
+  },
+  "devDependencies": {
+    "tslint": "^5.3.2",
+    "tslint-eslint-rules": "^4.1.1"
   }
 }
