--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build:asc": "tsc -p ./cli/asc/tsconfig.json",
-    "lint": "tslint -c tslint.json src/**/*.ts",
+    "lint": "tslint -c tslint.json src/**/*.ts cli/**/*.ts",
     "test": "node bin/asc --validate --text tests/test.ts"
   },
   "devDependencies": {
