--- a/cli/asc/tsconfig.json
+++ b/cli/asc/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../src/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
