--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,6 @@
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true,
-    "typeRoots": [".", "node_modules/@types", "lib"]
+    "strictNullChecks": true
   }
 }
