--- a/cli/asc/tsconfig.json
+++ b/cli/asc/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "outDir": "../../out"
+    "types": [ "node", "minimist" ]
   },
   "files": [
     "./index.ts"
