--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "typescript": "^2.4.0-dev.20170528"
   },
   "scripts": {
-    "build": "tsc -P src && browserify --debug out/compiler.js > out/bundle.js && uglifyjs --compress --mangle --output dist/assemblyscript.min.js --source-map content=inline,url=assemblyscript.min.js.map -- out/bundle.js",
+    "build:library": "node scripts/build-library",
+    "build:compiler": "tsc -P src",
+    "build:bundle": "browserify --debug out/compiler.js > out/bundle.js",
+    "build:minified": "uglifyjs --compress --mangle --output dist/assemblyscript.min.js --source-map content=inline,url=assemblyscript.min.js.map -- out/bundle.js",
+    "build": "npm run build:library && npm run build:compiler && npm run build:bundle && npm run build:minified",
     "lint": "tslint -c tslint.json src/**/*.ts cli/**/*.ts",
     "test": "node bin/asc tests/test.ts"
   },
