--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build:compiler": "tsc -P src",
     "build:bundle": "browserify --debug out/compiler.js > out/bundle.js",
     "build:minified": "uglifyjs --compress --mangle --output dist/assemblyscript.min.js --source-map content=inline,url=assemblyscript.min.js.map -- out/bundle.js",
-    "build": "npm run build:compiler && npm run build:bundle && npm run build:minified",
+    "build": "npm run build:library && npm run build:compiler && npm run build:bundle && npm run build:minified",
     "lint": "tslint -c tslint.json src/**/*.ts cli/**/*.ts",
     "test": "node bin/asc tests/test.ts"
   },
