More refactoring for browser compatibility, see #31

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:malloc": "node scripts/build-malloc",
     "build:library": "node scripts/build-library",
     "build:compiler": "tsc -P src",
-    "build:bundle": "browserify --debug out/compiler.js > out/bundle.js",
+    "build:bundle": "browserify --standalone assemblyscript --debug out/index.js > out/bundle.js",
     "build:minified": "uglifyjs --compress --mangle --output dist/assemblyscript.min.js --source-map content=inline,url=assemblyscript.min.js.map -- out/bundle.js",
     "build": "npm run build:library && npm run build:compiler && npm run build:bundle && npm run build:minified",
     "lint": "tslint -c tslint.json src/**/*.ts cli/**/*.ts",
