--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/long": "^3.0.31",
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.27",
+    "binaryen": "^1.37.13",
     "byots": "^2.4.0-dev.20170603.2.9",
     "long": "^3.2.0",
     "minimist": "^1.2.0",
