--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build:bundle": "browserify --standalone assemblyscript --debug out/index.js > out/bundle.js",
     "build:minified": "uglifyjs --compress --mangle --output dist/assemblyscript.min.js --source-map content=inline,url=assemblyscript.min.js.map -- out/bundle.js",
     "build": "npm run build:library && npm run build:compiler && npm run build:bundle && npm run build:minified",
-    "lint": "tslint -c tslint.json src/**/*.ts cli/**/*.ts",
+    "lint": "tslint -c tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "node bin/asc tests/test.ts"
   },
   "devDependencies": {
