--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "bin": {
     "asc": "bin/asc"
   },
+  "typings": "assembly.d.ts",
   "dependencies": {
     "@protobufjs/base64": "^1.1.1",
     "@types/long": "^3.0.31",
