--- a/tsconfig.assembly.json
+++ b/tsconfig.assembly.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "noLib": true
+    "noLib": true,
+    "noImplicitAny": false
   },
   "files":[
     "./assembly.d.ts"
