--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/typescript"]
-	path = lib/typescript
+	path = lib/typescript/master
 	url = https://github.com/Microsoft/TypeScript.git
