--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "typescript": "^2.4.0-dev.20170604"
   },
   "scripts": {
+    "build:check": "node scripts/build-check",
     "build:malloc": "node scripts/build-malloc",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
     "build:library": "node scripts/build-library",
-    "build:bundle": "webpack --config webpack.config.js --display-max-modules 100",
-    "build:dist": "uglifyjs --compress --mangle --output dist/assemblyscript.min.js --source-map root=dist/assemblyscript.js.map,url=assemblyscript.min.js.map --comments -- dist/assemblyscript.js",
-    "build": "npm run build:library && npm run build:bundle && npm run build:dist",
+    "build:bundle": "webpack --config webpack.config.js",
+    "build": "npm run build:check && npm run build:malloc && npm run build:typescript && npm run build:library && npm run build:bundle",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "node bin/asc tests/test.ts"
   },
@@ -48,8 +48,6 @@
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.1.0",
     "tslint": "^5.4.2",
-    "tslint-eslint-rules": "^4.1.1",
-    "uglify-js": "^3.0.15",
     "webassembly": "^0.11.0",
     "webpack": "^2.6.1"
   },
