Updated lib/loader and integrated it into build

--- a/lib/loader/tsconfig.json
+++ b/lib/loader/tsconfig.json
@@ -5,7 +5,12 @@
     "target": "es5",
     "types": [
       "node"
-    ]
+    ],
+    "lib":[
+      "es6",
+      "dom"
+    ],
+    "outDir": "./build"
   },
   "files": [
     "./index.ts"
