Also build a definition file for lib/loader

--- a/lib/loader/tsconfig.json
+++ b/lib/loader/tsconfig.json
@@ -10,7 +10,8 @@
       "es6",
       "dom"
     ],
-    "outDir": "./build"
+    "outDir": "./build",
+    "declaration": true
   },
   "files": [
     "./index.ts"
