--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es5",
     "outDir": "../out/",
     "types": [ "node", "long" ],
+    "lib": [ "es6", "dom" ],
     "sourceMap": true,
     "noLib": false,
     "noUnusedLocals": true,
