Initial standard library integration

--- a/tsconfig.assembly.json
+++ b/tsconfig.assembly.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "noLib": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "experimentalDecorators": true
   },
   "files":[
     "./assembly.d.ts"
