Restructured build scripts, see #50
Ultimately, it isn't required to build any of the dependences because these ship in pre-built form with the repo / package. Hence, 'npm run build' now only builds the main components while 'npm run build:alldeps' and its subscripts can be used in the rather uncommon case that libraries have been modified.

--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "webpack": "^2.6.1"
   },
   "scripts": {
-    "build:check": "node scripts/build-check",
     "build:malloc": "node scripts/build-malloc",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
     "build:loader": "cd lib/loader && webpack --config webpack.config.js && cd ../..",
+    "build:alldeps": "node scripts/build-check && npm run build:loader && npm run build:malloc && npm run build:typescript",
     "build:library": "node scripts/build-library",
     "build:bundle": "webpack --config webpack.config.js",
-    "build": "npm run lint && npm run build:check && npm run build:malloc && npm run build:typescript && npm run build:loader && npm run build:library && npm run build:bundle",
+    "build": "npm run lint && npm run build:library && npm run build:bundle",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "node bin/asc tests/test.ts"
   },
