--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
   },
   "typings": "assembly.d.ts",
   "dependencies": {
-    "@protobufjs/base64": "^1.1.1",
+    "@protobufjs/base64": "^1.1.2",
     "@types/long": "^3.0.31",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.27",
-    "binaryen": "1.37.13-nightly.20170617",
+    "@types/node": "^7.0.32",
+    "binaryen": "^1.37.14",
     "long": "^3.2.0",
     "minimist": "^1.2.0",
     "performance-now": "^2.1.0",
-    "ts-node": "^3.0.4",
-    "typescript": "^2.4.0-dev.20170604"
+    "ts-node": "^3.0.6",
+    "typescript": "^2.4.0"
   },
   "devDependencies": {
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.1.0",
-    "tslint": "^5.4.2",
+    "tslint": "^5.4.3",
     "webassembly": "^0.11.0",
     "webpack": "^2.6.1"
   },
