--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "minimist": "^1.2.0",
     "performance-now": "^2.1.0",
     "ts-node": "^3.0.6",
-    "typescript": "^2.4.0"
+    "typescript": "^2.4.0",
+    "wabt": "0.0.13"
   },
   "devDependencies": {
     "source-map-loader": "^0.2.1",
