--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/long": "^3.0.31",
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.32",
-    "binaryen": "^1.37.14",
+    "binaryen": "1.37.14",
     "long": "^3.2.0",
     "minimist": "^1.2.0",
     "performance-now": "^2.1.0",
