--- a/package.json
+++ b/package.json
@@ -35,7 +35,13 @@
     "wabt": "0.0.13"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/diff": "^3.2.0",
+    "@types/tape": "^4.2.30",
+    "chalk": "^1.1.3",
+    "diff": "^3.2.0",
     "source-map-loader": "^0.2.1",
+    "tape": "^4.6.3",
     "ts-loader": "^2.1.0",
     "tslint": "^5.4.3",
     "typedoc": "^0.7.1",
@@ -52,7 +58,7 @@
     "build:bundle": "webpack --config webpack.config.js",
     "build": "npm run lint && npm run build:library && npm run build:bundle",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
-    "test": "node bin/asc tests/test.ts",
+    "test": "ts-node tests",
     "docs": "typedoc --tsconfig src/tsconfig.json --mode modules --name \"AssemblyScript API Documentation\" --out docs/documentation/ --readme none --ignoreCompilerErrors --excludeNotExported --excludePrivate"
   },
   "browser": {
@@ -61,6 +67,5 @@
     "fs": false,
     "os": false,
     "source-map-support": false
-  },
-  "false": {}
+  }
 }
