Refactored loader to its own module; Initial d.ts bundling; Fine tuned build process

--- a/lib/loader/tsconfig.json
+++ b/lib/loader/tsconfig.json
@@ -10,10 +10,10 @@
       "es6",
       "dom"
     ],
-    "outDir": "./build",
+    "outDir": "./dist",
     "declaration": true
   },
   "files": [
-    "./index.ts"
+    "./assemblyscript-loader.ts"
   ]
 }
