--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assemblyscript",
   "description": "A subset of TypeScript that compiles to WebAssembly.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Daniel Wirtz <dcode+assemblyscript@dcode.io>",
   "license": "Apache-2.0",
   "repository": {
@@ -21,34 +21,6 @@
     "asc": "bin/asc"
   },
   "typings": "assembly.d.ts",
-  "dependencies": {
-    "@protobufjs/base64": "^1.1.2",
-    "@types/long": "^3.0.31",
-    "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.32",
-    "binaryen": "1.37.14",
-    "long": "^3.2.0",
-    "minimist": "^1.2.0",
-    "performance-now": "^2.1.0",
-    "ts-node": "^3.0.6",
-    "typescript": "^2.4.0",
-    "wabt": "0.0.13"
-  },
-  "devDependencies": {
-    "@types/chalk": "^0.4.31",
-    "@types/diff": "^3.2.0",
-    "@types/tape": "^4.2.30",
-    "chalk": "^1.1.3",
-    "diff": "^3.2.0",
-    "source-map-loader": "^0.2.1",
-    "tape": "^4.6.3",
-    "ts-loader": "^2.1.0",
-    "tslint": "^5.4.3",
-    "typedoc": "^0.7.1",
-    "typedoc-plugin-external-module-name": "^1.0.9",
-    "webassembly": "^0.11.0",
-    "webpack": "^2.6.1"
-  },
   "scripts": {
     "build:malloc": "node scripts/build-malloc",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
@@ -60,6 +32,39 @@
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "ts-node tests",
     "docs": "typedoc --tsconfig src/tsconfig.json --mode modules --name \"AssemblyScript API Documentation\" --out docs/documentation/ --readme none --ignoreCompilerErrors --excludeNotExported --excludePrivate"
+  },
+  "dependencies": {
+    "@protobufjs/base64": "^1.1.2",
+    "@types/long": "^3.0.31",
+    "@types/minimist": "^1.2.0",
+    "@types/node": "^7.0.32",
+    "@types/webassembly-js-api": "0.0.1",
+    "assemblyscript-loader": "0.0.2",
+    "binaryen": "1.37.14",
+    "long": "^3.2.0",
+    "minimist": "^1.2.0",
+    "performance-now": "^2.1.0",
+    "ts-node": "^3.1.0",
+    "typescript": "^2.4.0",
+    "wabt": "0.0.13"
+  },
+  "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/diff": "^3.2.0",
+    "@types/rimraf": "0.0.28",
+    "@types/tape": "^4.2.30",
+    "chalk": "^1.1.3",
+    "diff": "^3.2.0",
+    "dts-bundle": "^0.7.3",
+    "rimraf": "^2.6.1",
+    "source-map-loader": "^0.2.1",
+    "tape": "^4.6.3",
+    "ts-loader": "^2.2.0",
+    "tslint": "^5.4.3",
+    "typedoc": "^0.7.1",
+    "typedoc-plugin-external-module-name": "^1.0.9",
+    "webassembly": "^0.11.0",
+    "webpack": "^2.6.1"
   },
   "browser": {
     "buffer": false,
