--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "target": "es5",
     "outDir": "../out/",
+    "typeRoots": [ "../node_modules", "../node_modules/@types" ],
     "types": [ "node", "long" ],
     "lib": [ "es6", "dom" ],
     "sourceMap": true,
@@ -11,7 +12,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "preserveConstEnums": false,
-    "allowJs": false
+    "allowJs": false,
+    "declaration": true
   },
   "include": [
     "./**/*.ts"
