--- a/package.json
+++ b/package.json
@@ -20,51 +20,54 @@
   "bin": {
     "asc": "bin/asc"
   },
-  "typings": "assembly.d.ts",
+  "main": "dist/assemblyscript.js",
+  "typings": "dist/assemblyscript.d.ts",
   "scripts": {
     "build:malloc": "node scripts/build-malloc",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
     "build:loader": "cd lib/loader && webpack --config webpack.config.js && cd ../..",
     "build:alldeps": "node scripts/build-check && npm run build:loader && npm run build:malloc && npm run build:typescript",
     "build:library": "node scripts/build-library",
-    "build:bundle": "webpack --config webpack.config.js",
+    "build:bundle": "tsc -P src && node scripts/build-bundle",
     "build": "npm run lint && npm run build:library && npm run build:bundle",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "ts-node tests",
     "docs": "typedoc --tsconfig src/tsconfig.json --mode modules --name \"AssemblyScript API Documentation\" --out docs/documentation/ --readme none --ignoreCompilerErrors --excludeNotExported --excludePrivate"
   },
   "dependencies": {
-    "@protobufjs/base64": "^1.1.2",
-    "@types/long": "^3.0.31",
-    "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.32",
-    "@types/webassembly-js-api": "0.0.1",
-    "assemblyscript-loader": "0.0.2",
     "binaryen": "1.37.14",
-    "long": "^3.2.0",
+    "chalk": "^1.1.3",
     "minimist": "^1.2.0",
-    "performance-now": "^2.1.0",
-    "ts-node": "^3.1.0",
-    "typescript": "^2.4.0",
     "wabt": "0.0.13"
   },
   "devDependencies": {
+    "@protobufjs/base64": "^1.1.2",
     "@types/chalk": "^0.4.31",
     "@types/diff": "^3.2.0",
+    "@types/long": "^3.0.31",
+    "@types/minimist": "^1.2.0",
+    "@types/node": "^7.0.32",
     "@types/rimraf": "0.0.28",
     "@types/tape": "^4.2.30",
-    "chalk": "^1.1.3",
+    "browserify": "^14.4.0",
     "diff": "^3.2.0",
     "dts-bundle": "^0.7.3",
+    "gulp-header": "^1.8.8",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
+    "long": "^3.2.0",
+    "performance-now": "^2.1.0",
     "rimraf": "^2.6.1",
-    "source-map-loader": "^0.2.1",
     "tape": "^4.6.3",
-    "ts-loader": "^2.2.0",
+    "ts-node": "^3.1.0",
     "tslint": "^5.4.3",
     "typedoc": "^0.7.1",
     "typedoc-plugin-external-module-name": "^1.0.9",
-    "webassembly": "^0.11.0",
-    "webpack": "^2.6.1"
+    "typescript": "^2.4.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-fs": "^2.4.4",
+    "vinyl-source-stream": "^1.1.0",
+    "webassembly": "^0.11.0"
   },
   "browser": {
     "buffer": false,
@@ -72,5 +75,18 @@
     "fs": false,
     "os": false,
     "source-map-support": false
-  }
+  },
+  "files": [
+    "assembly.d.ts",
+    "bin/asc",
+    "bin/asc.js",
+    "dist/assemblyscript.d.ts",
+    "dist/assemblyscript.js",
+    "dist/assemblyscript.js.map",
+    "package.json",
+    "package-lock.json",
+    "README.md",
+    "tsconfig.assembly.json"
+  ],
+  "false": {}
 }
