--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
     "typeRoots": [ "../node_modules", "../node_modules/@types" ],
     "types": [ "node", "long" ],
     "lib": [ "es6", "dom" ],
-    "sourceMap": true,
+    "inlineSourceMap": true,
     "noLib": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
