--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "binaryen": "1.37.14",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
-    "wabt": "0.0.13"
+    "wabt": "0.0.13-nightly.20170624"
   },
   "devDependencies": {
     "@protobufjs/base64": "^1.1.2",
