--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "bin": {
     "asc": "bin/asc"
   },
-  "main": "dist/assemblyscript.js",
-  "typings": "dist/assemblyscript.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build:malloc": "node scripts/build-malloc",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
@@ -31,7 +31,7 @@
     "build:bundle": "tsc -P src && node scripts/build-bundle",
     "build": "npm run lint && npm run build:library && npm run build:bundle",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
-    "test": "ts-node tests",
+    "test": "ts-node tests | tap-spec",
     "docs": "typedoc --tsconfig src/tsconfig.json --mode modules --name \"AssemblyScript API Documentation\" --out docs/documentation/ --readme none --ignoreCompilerErrors --excludeNotExported --excludePrivate"
   },
   "dependencies": {
@@ -58,6 +58,7 @@
     "long": "^3.2.0",
     "performance-now": "^2.1.0",
     "rimraf": "^2.6.1",
+    "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "ts-node": "^3.1.0",
     "tslint": "^5.4.3",
@@ -83,6 +84,8 @@
     "dist/assemblyscript.d.ts",
     "dist/assemblyscript.js",
     "dist/assemblyscript.js.map",
+    "index.js",
+    "index.d.ts",
     "package.json",
     "package-lock.json",
     "README.md",
