Added long/ulong support to loader
This uses long.js but it is possible to exclude it in the build process in case it isn't needed. In this case, the implementation will just work with long-likes.

--- a/lib/loader/package.json
+++ b/lib/loader/package.json
@@ -27,6 +27,8 @@
     "README.md"
   ],
   "dependencies": {
-    "@types/webassembly-js-api": "0.0.1"
+    "@types/long": "^3.0.31",
+    "@types/webassembly-js-api": "0.0.1",
+    "long": "^3.2.0"
   }
 }
