--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
     "build:alldeps": "node scripts/build-check && npm run build:malloc && npm run build:typescript",
     "build:library": "node scripts/build-library",
+    "build:bundle-loader": "node scripts/build-bundle-loader",
     "build:bundle": "tsc -P src && node scripts/build-bundle",
-    "build": "npm run lint && npm run build:library && npm run build:bundle",
+    "build": "npm run lint && npm run build:library && npm run build:bundle && npm run build:bundle-loader",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "ts-node tests",
     "test:spec": "ts-node tests | tap-spec",
