--- a/examples/project/tsconfig.json
+++ b/examples/project/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/assemblyscript/tsconfig.assembly.json"
+  "extends": "./node_modules/assemblyscript/tsconfig.assembly.json",
+  "include": [
+    "./*.ts"
+  ]
 }
