Removed implicit cleanup in build-bundle and added a clean step instead, see #83

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build:bundle-loader": "node scripts/build-bundle-loader",
     "build:bundle": "tsc -P src && node scripts/build-bundle",
     "build": "npm run lint && npm run build:library && npm run build:bundle && npm run build:bundle-loader",
+    "clean": "node scripts/clean",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "ts-node tests",
     "test:spec": "ts-node tests | tap-spec",
