Support for imported malloc; Initial support for 'super' calls; Refactoring

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "docs": "npm run docs:api && npm run docs:std"
   },
   "dependencies": {
-    "binaryen": "1.37.14",
+    "binaryen": "^1.37.14-nightly.20170706",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "wabt": "0.0.13-nightly.20170628"
