Revised AssemblyScript specific diagnostics
This adds a diagnostics extension similar to the generated diagnostics map used by TypeScript, but with AssemblyScript specific diagnostics exclusively. At places where TypeScript should already report an issue, an error is thrown instead.

--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "build:malloc": "node scripts/build-malloc",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
     "build:alldeps": "node scripts/build-check && npm run build:malloc && npm run build:typescript",
+    "build:diagnostics": "node scripts/build-diagnostics",
     "build:library": "node scripts/build-library",
     "build:bundle-loader": "node scripts/build-bundle-loader",
     "build:bundle": "tsc -P src && node scripts/build-bundle",
-    "build": "npm run lint && npm run build:library && npm run build:bundle && npm run build:bundle-loader",
+    "build": "npm run build:diagnostics && npm run lint && npm run build:library && npm run build:bundle && npm run build:bundle-loader",
     "clean": "node scripts/clean",
     "lint": "tslint --config tslint.json src/**/*.ts cli/**/*.ts assembly.d.ts",
     "test": "ts-node tests",
