--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: node_js
 node_js:
   - 6
   - 8
-branches:
-  only: master
 git:
   submodules: false
-script: npm run test:spec
+script: npm test
