Renamed malloc dependency to runtime; Added simple console bindings; Updated TypeScript dependency; Refactored function call logic

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build:malloc": "node scripts/build-malloc",
+    "build:runtime": "node scripts/build-runtime",
     "build:typescript": "tsc -P lib/typescript && echo export = ts; >> lib/typescript/build/index.d.ts",
-    "build:alldeps": "node scripts/build-check && npm run build:malloc && npm run build:typescript",
+    "build:alldeps": "node scripts/build-check && npm run build:runtime && npm run build:typescript",
     "build:diagnostics": "node scripts/build-diagnostics",
     "build:library": "node scripts/build-library",
     "build:bundle-loader": "node scripts/build-bundle-loader",
